--- a/policies/token-based-ratelimit/policy-definition.yaml
+++ b/policies/token-based-ratelimit/policy-definition.yaml
@@ -1,5 +1,5 @@
 name: token-based-ratelimit
-version: v0.2.1
+version: v0.2.2
 description: |
   Enforces token-based rate limits for LLM traffic by resolving token extraction
   paths from provider templates and delegating enforcement to the
@@ -12,6 +12,7 @@ parameters:
     promptTokenLimits:
       type: array
       description: Specifies rate limits for prompt (input) tokens.
+      default: []
       items:
         type: object
         required: ["count", "duration"]
@@ -29,6 +30,7 @@ parameters:
     completionTokenLimits:
       type: array
       description: Specifies rate limits for completion (output) tokens.
+      default: []
       items:
         type: object
         required: ["count", "duration"]
@@ -46,6 +48,7 @@ parameters:
     totalTokenLimits:
       type: array
       description: Specifies rate limits for total tokens (prompt + completion).
+      default: []
       items:
         type: object
         required: ["count", "duration"]
