--- a/policies/request-rewrite/policy-definition.yaml
+++ b/policies/request-rewrite/policy-definition.yaml
@@ -1,5 +1,5 @@
 name: request-rewrite
-version: v0.2.0
+version: v0.2.1
 description: |
   Rewrites incoming requests by updating paths, query parameters, and/or HTTP methods before forwarding to upstream services.
   Supports multiple path rewrite types: prefix replacement, full path replacement, and regex-based substitution.
@@ -146,6 +146,7 @@ parameters:
               separator:
                 type: string
                 description: Optional separator used by Append (default is empty string)
+                default: ""
                 maxLength: 64
               pattern:
                 type: string
