--- a/policies/set-headers/policy-definition.yaml
+++ b/policies/set-headers/policy-definition.yaml
@@ -15,6 +15,7 @@ parameters:
       properties:
         headers:
           type: array
+          x-wso2-policy-advanced-param: false
           description: Specifies headers to set during the request phase.
           items:
             type: object
@@ -22,12 +23,14 @@ parameters:
             properties:
               name:
                 type: string
+                x-wso2-policy-advanced-param: false
                 description: Specifies the header name. Matching is case-insensitive.
                 minLength: 1
                 maxLength: 256
                 pattern: "^[a-zA-Z0-9-_]+$"
               value:
                 type: string
+                x-wso2-policy-advanced-param: false
                 description: Specifies the header value to set.
                 maxLength: 8192
             required:
@@ -45,6 +48,7 @@ parameters:
       properties:
         headers:
           type: array
+          x-wso2-policy-advanced-param: false
           description: Specifies headers to set during the response phase.
           items:
             type: object
@@ -52,12 +56,14 @@ parameters:
             properties:
               name:
                 type: string
+                x-wso2-policy-advanced-param: false
                 description: Specifies the header name. Matching is case-insensitive.
                 minLength: 1
                 maxLength: 256
                 pattern: "^[a-zA-Z0-9-_]+$"
               value:
                 type: string
+                x-wso2-policy-advanced-param: false
                 description: Specifies the header value to set.
                 maxLength: 8192
             required:
