--- a/policies/api-key-auth/policy-definition.yaml
+++ b/policies/api-key-auth/policy-definition.yaml
@@ -1,8 +1,8 @@
 name: api-key-auth
 version: v0.3.0
 description: |
-  Validates API keys in incoming requests and authorizes access when a valid key
-  is present. Reads the key from a configured header or query parameter.
+  Secures APIs by validating API keys in incoming requests. API keys can be
+  provided through a configured HTTP header or query parameter.
 
 parameters:
   type: object
