--- a/policies/jwt-auth/policy-definition.yaml
+++ b/policies/jwt-auth/policy-definition.yaml
@@ -1,9 +1,8 @@
 name: jwt-auth
 version: v0.3.0
 description: |
-  Validates JWT access tokens in API requests using configured JWKS providers.
-  Verifies signature and claims such as expiry, issuer, audience, scopes, and
-  required claims.
+  Validates JWT access tokens included in API requests. The gateway verifies the
+  token's signature, expiry, issuer, audience, scopes, and required claims.
 
 parameters:
   type: object
