--- a/policies/azure-content-safety-content-moderation/policy-definition.yaml
+++ b/policies/azure-content-safety-content-moderation/policy-definition.yaml
@@ -29,7 +29,7 @@ parameters:
           default: false
         showAssessment:
           type: boolean
-          x-wso2-policy-advanced-param: false
+          x-wso2-policy-advanced-param: true
           description: |
             Specifies whether blocked responses include detailed moderation
             assessment information.
@@ -42,7 +42,7 @@ parameters:
             disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 4
         sexualSeverityThreshold:
           type: integer
           x-wso2-policy-advanced-param: false
@@ -51,7 +51,7 @@ parameters:
             disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 5
         selfHarmSeverityThreshold:
           type: integer
           x-wso2-policy-advanced-param: false
@@ -60,7 +60,7 @@ parameters:
             to disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 3
         violenceSeverityThreshold:
           type: integer
           x-wso2-policy-advanced-param: false
@@ -69,7 +69,7 @@ parameters:
             disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 4
     response:
       type: object
       x-wso2-policy-advanced-param: false
@@ -104,7 +104,7 @@ parameters:
             disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 4
         sexualSeverityThreshold:
           type: integer
           x-wso2-policy-advanced-param: false
@@ -113,7 +113,7 @@ parameters:
             disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 5
         selfHarmSeverityThreshold:
           type: integer
           x-wso2-policy-advanced-param: false
@@ -122,7 +122,7 @@ parameters:
             to disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 3
         violenceSeverityThreshold:
           type: integer
           x-wso2-policy-advanced-param: false
@@ -131,7 +131,7 @@ parameters:
             disable this category. Content at or above the threshold is blocked.
           minimum: -1
           maximum: 7
-          default: -1
+          default: 4
 
 systemParameters:
   type: object
