pii-masking-regex: add built-in detectors and advanced custom config

--- a/policies/pii-masking-regex/policy-definition.yaml
+++ b/policies/pii-masking-regex/policy-definition.yaml
@@ -8,11 +8,31 @@ description: |
 parameters:
   type: object
   properties:
-    piiEntities:
-      type: array
+    email:
+      type: boolean
+      x-wso2-policy-advanced-param: false
       description: |
-        Specifies PII entity definitions used for detection. Each item contains
-        an entity name and the regex pattern used to match it.
+        Specifies whether built-in EMAIL detection is enabled.
+      default: false
+    phone:
+      type: boolean
+      x-wso2-policy-advanced-param: false
+      description: |
+        Specifies whether built-in PHONE detection is enabled.
+      default: false
+    ssn:
+      type: boolean
+      x-wso2-policy-advanced-param: false
+      description: |
+        Specifies whether built-in SSN detection is enabled.
+      default: false
+    customPIIEntities:
+      type: array
+      x-wso2-policy-advanced-param: true
+      description: |
+        Specifies custom PII entity definitions used for detection. Each item
+        contains an entity name and the regex pattern used to match it.
+      minItems: 1
       items:
         type: object
         properties:
@@ -29,18 +49,36 @@ parameters:
         - piiRegex
     jsonPath:
       type: string
+      x-wso2-policy-advanced-param: true
       description: |
         Specifies the JSONPath used to extract the value to process. When
         empty, the entire payload is processed as plain text.
-      default: ""
+      default: "$.messages"
     redactPII:
       type: boolean
+      x-wso2-policy-advanced-param: true
       description: |
         Specifies whether matched PII is permanently redacted as "*****"
         (true) or masked with reversible placeholders (false).
       default: false
-  required:
-  - piiEntities
+  anyOf:
+    - required:
+      - customPIIEntities
+    - required:
+      - email
+      properties:
+        email:
+          const: true
+    - required:
+      - phone
+      properties:
+        phone:
+          const: true
+    - required:
+      - ssn
+      properties:
+        ssn:
+          const: true
 
 systemParameters:         
   type: object
