prompt-decorator: support text/messages config with inferred jsonPath

--- a/policies/prompt-decorator/policy-definition.yaml
+++ b/policies/prompt-decorator/policy-definition.yaml
@@ -8,25 +8,66 @@ parameters:
   type: object
   properties:
     promptDecoratorConfig:
-      type: string
+      type: object
+      x-wso2-policy-advanced-param: true
       description: |
-        Specifies a JSON string that defines decorations, typically as role and
-        content entries, applied during request mediation.
-      minLength: 1
+        Specifies prompt decoration configuration. Provide exactly one of
+        `text` or `messages`.
+      additionalProperties: false
+      properties:
+        text:
+          type: string
+          x-wso2-policy-advanced-param: false
+          description: |
+            Specifies text decoration applied when targeting a string prompt.
+          minLength: 1
+        messages:
+          type: array
+          x-wso2-policy-advanced-param: false
+          description: |
+            Specifies chat message decorations applied when targeting a messages
+            array.
+          minItems: 1
+          items:
+            type: object
+            additionalProperties: false
+            properties:
+              role:
+                type: string
+                x-wso2-policy-advanced-param: true
+                enum:
+                  - system
+                  - user
+                  - assistant
+                  - tool
+              content:
+                type: string
+                x-wso2-policy-advanced-param: true
+                minLength: 1
+            required:
+              - role
+              - content
+      oneOf:
+        - required:
+            - text
+        - required:
+            - messages
     jsonPath:
       type: string
-      description: Specifies the JSONPath expression used to locate the prompt
-        segment to decorate.
-      default: "$.messages"
-      minLength: 1
+      x-wso2-policy-advanced-param: true
+      description: |
+        Specifies the JSONPath expression used to locate the prompt segment to
+        decorate. If omitted, defaults to "$.messages[-1].content" for `text`
+        decorations and "$.messages" for `messages` decorations.
+      default: ""
     append:
       type: boolean
+      x-wso2-policy-advanced-param: true
       description: Specifies whether decorated content is appended (true) or
         prepended (false) to the selected prompt segment.
       default: false
   required:
     - promptDecoratorConfig
-    - jsonPath
 
 systemParameters:
   type: object
