regex-guardrail: set defaults and add comprehensive tests

--- a/policies/regex-guardrail/policy-definition.yaml
+++ b/policies/regex-guardrail/policy-definition.yaml
@@ -11,27 +11,32 @@ parameters:
   properties:
     request:
       type: object
+      x-wso2-policy-advanced-param: false
       description: Configuration for request phase validation
       properties:
         regex:
           type: string
+          x-wso2-policy-advanced-param: false
           description: Regular expression pattern to match against the content
           minLength: 1
         jsonPath:
           type: string
+          x-wso2-policy-advanced-param: true
           description: |
             JSONPath expression to extract a specific value from JSON payload.
             If empty, validates the entire payload as a string.
             Examples: "$.message", "$.data.content", "$.items[0].text"
-          default: ""
+          default: "$.messages"
         invert:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, validation passes when regex does NOT match (inverted logic).
             If false (default), validation passes when regex matches.
           default: false
         showAssessment:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, includes detailed assessment information in error responses.
             If false, returns minimal error information.
@@ -40,33 +45,41 @@ parameters:
       - regex
     response:
       type: object
+      x-wso2-policy-advanced-param: false
       description: Configuration for response phase validation
       properties:
         regex:
           type: string
+          x-wso2-policy-advanced-param: false
           description: Regular expression pattern to match against the content
           minLength: 1
         jsonPath:
           type: string
+          x-wso2-policy-advanced-param: true
           description: |
             JSONPath expression to extract a specific value from JSON payload.
             If empty, validates the entire payload as a string.
             Examples: "$.message", "$.data.content", "$.items[0].text"
-          default: ""
+          default: "$.messages"
         invert:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, validation passes when regex does NOT match (inverted logic).
             If false (default), validation passes when regex matches.
           default: false
         showAssessment:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, includes detailed assessment information in error responses.
             If false, returns minimal error information.
           default: false
       required:
       - regex
+  anyOf:
+    - required: [ request ]
+    - required: [ response ]
 
 systemParameters:
   type: object
