url-guardrail: mark request/response params as advanced

--- a/policies/url-guardrail/policy-definition.yaml
+++ b/policies/url-guardrail/policy-definition.yaml
@@ -15,6 +15,7 @@ parameters:
       properties:
         jsonPath:
           type: string
+          x-wso2-policy-advanced-param: true
           description: |
             JSONPath expression to extract a specific value from JSON payload.
             If empty, validates the entire payload as a string.
@@ -22,18 +23,21 @@ parameters:
           default: ""
         onlyDNS:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, validates URLs only via DNS resolution (faster, less reliable).
             If false (default), validates URLs via HTTP HEAD request (slower, more reliable).
           default: false
         timeout:
           type: integer
+          x-wso2-policy-advanced-param: true
           description: |
             Timeout in milliseconds for DNS lookup or HTTP HEAD request.
             Default is 3000ms (3 seconds).
           default: 3000
         showAssessment:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, includes detailed assessment information including invalid URLs in error responses.
             If false, returns minimal error information.
@@ -44,6 +48,7 @@ parameters:
       properties:
         jsonPath:
           type: string
+          x-wso2-policy-advanced-param: true
           description: |
             JSONPath expression to extract a specific value from JSON payload.
             If empty, validates the entire payload as a string.
@@ -51,22 +56,28 @@ parameters:
           default: ""
         onlyDNS:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, validates URLs only via DNS resolution (faster, less reliable).
             If false (default), validates URLs via HTTP HEAD request (slower, more reliable).
           default: false
         timeout:
           type: integer
+          x-wso2-policy-advanced-param: true
           description: |
             Timeout in milliseconds for DNS lookup or HTTP HEAD request.
             Default is 3000ms (3 seconds).
           default: 3000
         showAssessment:
           type: boolean
+          x-wso2-policy-advanced-param: true
           description: |
             If true, includes detailed assessment information including invalid URLs in error responses.
             If false, returns minimal error information.
           default: false
+  anyOf:
+    - required: [ request ]
+    - required: [ response ]
 
 systemParameters:
   type: object
